--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
                     <tr>
                         <td class="edu">Now</td>
                         <td>Staff ML Engineer at Adobe, San Jose<br>
-                            GenAI, Multimodal LLMs, VLMs, Computer Vision for Adobe products</td>
+                            <i>GenAI, Multimodal LLMs, VLMs, Computer Vision for Adobe products</i></td>
                     </tr>
                     <tr>
                         <td class="edu">Before</td>
                         <td>Senior Research Scientist at Meta (Facebook) Reality Labs, Bay Area<br>
-                            Computational Photography, On-device Computer Vision/AI, Biometric Authentication for Wearables</td>
+                            <i>Computational Photography, On-device Computer Vision/AI, Biometric Authentication for Wearables</i></td>
                     </tr>
                     <tr>
                         <td class="edu">Past</td>
                         <td>Research Scientist at Carnegie Mellon University<br>
-                            <a href="http://imagesci.ece.cmu.edu/">Image Science lab, Department of ECE</a><br>
-                            with <a href="https://users.ece.cmu.edu/~saswin/">Prof. Aswin Sankaranarayanan</a></td>
+                            <i><a href="http://imagesci.ece.cmu.edu/">Image Science lab, Department of ECE</a><br>
+                            with <a href="https://users.ece.cmu.edu/~saswin/">Prof. Aswin Sankaranarayanan</a></i></td>
                     </tr>
                         <!--
                     <tr>
